--- a/requirements.amd64.txt
+++ b/requirements.amd64.txt
@@ -1,13 +1,37 @@
-tqdm 
-boto3 
-requests 
-regex 
-sentencepiece 
-sacremoses
 
-packaging
-importlib_metadata
-transformers
-huggingface_hub
-
-python-aiml
+Pillow==8.2.0 
+boto3==1.17.69 
+botocore==1.20.69 
+certifi==2020.12.5 
+chardet==4.0.0
+click==7.1.2
+dataclasses==0.8 
+filelock==3.0.12 
+huggingface_hub==0.0.8 
+idna==2.10
+importlib_metadata==4.0.1 
+jmespath==0.10.0 
+joblib==1.0.1
+numpy==1.19.5 
+packaging==20.9 
+pip==21.1.1
+pyparsing==2.4.7 
+python_aiml==0.9.3 
+python_dateutil==2.8.1 
+regex==2021.4.4
+requests==2.25.1 
+s3transfer==0.4.2 
+sacremoses==0.0.45 
+sentencepiece==0.1.95 
+setuptools==56.0.0
+six==1.16.0
+tokenizers==0.10.2 
+#torch==1.8.1+cpu 
+#torchaudio==0.8.1 
+#torchvision==0.9.1+cpu 
+tqdm==4.60.0 
+transformers==4.5.1 
+typing_extensions==3.10.0.0 
+urllib3==1.26.4 
+wheel==0.36.2 
+zipp==3.4.1
