add max-length to tokenizer to fix exceedingly long template text

--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,7 @@
 AIML_DIR=../data/aiml-en-us-foundation-alice/
 BATCH_SIZE=128
 WORD_FACTOR=-1
+MAX_LENGTH=128
 
 ## DOUBLE_COMPARE can be 1 or 0
 DOUBLE_COMPARE=1
