--- a/src/.env
+++ b/src/.env
@@ -3,5 +3,10 @@ BATCH_SIZE=128
 WORD_FACTOR=-1
 MAX_LENGTH=96
 
-## DOUBLE_COMPARE can be 1 or 0
-DOUBLE_COMPARE=1
+## DOUBLE_COMPARE can be 2, 1, or 0
+
+# 2 == just do template comparison
+# 1 == do double comparison
+# 0 == just do pattern comparison
+
+DOUBLE_COMPARE=2
