make env vars better with defaults

--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 AIML_DIR=../data/aiml-en-us-foundation-alice/
-BATCH_SIZE=128
+BATCH_SIZE=32
 WORD_FACTOR=-1
 MAX_LENGTH=96
 
@@ -10,3 +10,7 @@ MAX_LENGTH=96
 # 0 == just do pattern comparison
 
 DOUBLE_COMPARE=1
+
+## CUDA can be 0 or 1
+
+CUDA=1
