--- a/src/.env
+++ b/src/.env
@@ -3,7 +3,7 @@ BATCH_SIZE=32
 WORD_FACTOR=-1
 MAX_LENGTH=32
 
-## DOUBLE_COMPARE can be 2, 1, or 0
+## DOUBLE_COMPARE can be 2, 1, or 0 ##
 
 # 2 == just do template comparison
 # 1 == do double comparison
@@ -11,11 +11,11 @@ MAX_LENGTH=32
 
 DOUBLE_COMPARE=1
 
-## CUDA can be 0 or 1
+## CUDA can be 0 or 1 ##
 
 CUDA=1
 
-## BERT_MODEL can be 0 or 1
+## BERT_MODEL can be 0 or 1 ##
 
 # 0 == bert-base-uncased
 # 1 == bert-large-uncased
