--- a/src/.env
+++ b/src/.env
@@ -5,13 +5,17 @@ BATCH_SIZE=32
 WORD_FACTOR=-1
 MAX_LENGTH=32
 
+## SRAI_LITERAL can be 0 or 1 ##
+
+SRAI_LITERAL=1
+
 ## DOUBLE_COMPARE can be 2, 1, or 0 ##
 
 # 2 == just do template comparison
 # 1 == do double comparison, include weights
 # 0 == just do pattern comparison
 
-DOUBLE_COMPARE=1
+DOUBLE_COMPARE=0
 
 ## CUDA can be 0 or 1 ##
 
