linux .env file and readme.md

--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,5 @@
 AIML_DIR=../data/aiml-en-us-foundation-alice/
-#AIML_FILE=./bot.aiml
-AIML_FILE=/home/dave/workspace/bert-aiml/src/../aiml/maze.xml
+AIML_FILE=${HOME}/workspace/bert-aiml/src/../aiml/maze.xml
 BATCH_SIZE=32
 WORD_FACTOR=-1
 MAX_LENGTH=32
