--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 AIML_DIR=../data/aiml-en-us-foundation-alice/
-AIML_FILE=${HOME}/workspace/bert-aiml/src/../maze/generated.aiml
+AIML_FILE=./bot.aiml
 BATCH_SIZE=32
 WORD_FACTOR=-1
 MAX_LENGTH=32
