--- a/requirements.amd64.txt
+++ b/requirements.amd64.txt
@@ -5,7 +5,10 @@ botocore==1.20.69
 certifi==2020.12.5 
 chardet==4.0.0
 click==7.1.2
-dataclasses==0.8 
+
+## this line gives problems ##
+dataclasses==0.6
+
 filelock==3.0.12 
 huggingface_hub==0.0.8 
 idna==2.10
