add another bert model to model list - does not work as well

--- a/src/.env
+++ b/src/.env
@@ -20,10 +20,11 @@ DOUBLE_COMPARE=0
 
 CUDA=1
 
-## BERT_MODEL can be 0 or 1 ##
+## BERT_MODEL can be 0, 1 or 2 ##
 
 # 0 == bert-base-uncased
 # 1 == bert-large-uncased
+# 2 == google/bert_uncased_L-8_H-512_A-8
 
 BERT_MODEL=0
 
